# weather_data_api

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  tests.yml  tests_pip_env.yml  tests_poetry_env.yml
data_documentation/: notes.txt  url.txt
data_documentation/all_station_ids/: isd-history.txt
data_documentation/wban_station_id/: url.txt
src/common/: common.py
src/step01_identify_stations/: environment.yml  identify_stations.py
src/step02_download/: anaconda_env_create.txt  download_isd_lite.py  environment.yml
src/step03_process_tables/: anaconda_env_create.txt  process_data_tables.py
src/step04_api/: api.py
src/step04_set_up_log_config/: environment.yml  set_up_log_configuration.py
src/step05_api/: anaconda_env_create.txt  api.py  log_config.json  pyproject.toml
tests/: test_step04_api.py  test_step05_api.py
